--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,11 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "lib": ["ES2020", "DOM"],
-    "types": ["node", "vscode"]
+    "types": ["node", "vscode"],
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"
+    ]
   },
   "exclude": ["node_modules", ".vscode"]
 } 
