--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "typeRoots": [
       "./node_modules/@types",
       "./src/types"
-    ]
+    ],
+    "allowSyntheticDefaultImports": true
   },
   "exclude": ["node_modules", ".vscode"]
 } 
