--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,10 @@
     ],
     "allowSyntheticDefaultImports": true
   },
-  "exclude": ["node_modules", ".vscode"]
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 } 
