feat(gpu): Implement GPU Support and Enhance Error Handling
Major Changes:
- Added comprehensive GPU detection and support system
- Implemented platform-specific GPU configurations including Metal for macOS
- Enhanced error handling with detailed logging and propagation
- Centralized version management with GPU awareness

Technical Details:
1. GPU Support:
   - Added GPUManager for hardware detection and capability checks
   - Implemented GPUContext for runtime management
   - Added Metal support for macOS platforms
   - Created fallback mechanisms for CPU-only systems

2. Error Handling:
   - Added NativeLayerError for better native code error handling
   - Enhanced logging with timestamps and contextual information
   - Implemented granular validation checks
   - Added detailed error propagation from native layer

3. Version Management:
   - Enhanced binary compatibility checks
   - Added GPU-aware binary selection
   - Improved platform-specific configuration handling
   - Added version validation for GPU binaries

4. Testing:
   - Added GPU-specific test suite
   - Implemented Mocha test configuration
   - Added Sinon for test mocking
   - Enhanced test coverage for GPU scenarios

5. Platform Support:
   - Added comprehensive platform configurations
   - Enhanced binary management for all supported platforms
   - Improved environment variable handling
   - Added platform-specific GPU configurations

Dependencies:
- Added @types/sinon and sinon for testing
- Updated Mocha configuration
- Enhanced TypeScript configurations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,17 +9,19 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "lib": ["ES2020", "DOM"],
-    "types": ["node", "vscode"],
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/types"
+    "types": [
+      "node",
+      "mocha",
+      "vscode",
+      "sinon"
     ],
     "allowSyntheticDefaultImports": true
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    ".vscode-test"
   ]
 } 
