--- a/package.json
+++ b/package.json
@@ -32,6 +32,14 @@
         "command": "tts-stt-cursor.testTTS",
         "title": "TTS-STT: Test TTS Configuration",
         "category": "TTS-STT"
+      },
+      {
+        "command": "tts-stt.testTTS",
+        "title": "Test TTS Configuration"
+      },
+      {
+        "command": "tts-stt.testSTT",
+        "title": "Test STT Configuration"
       }
     ],
     "menus": {
@@ -62,28 +70,30 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
+    "preinstall": "tsc -p ./",
+    "postinstall": "node scripts/setup-models.js && node scripts/setup-native.js",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
-    "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js",
-    "postinstall": "node scripts/setup-models.js",
-    "download-models": "node scripts/download-models.js"
+    "pretest": "npm run compile && npm run setup-test-env",
+    "setup-test-env": "node scripts/setup-test-env.js",
+    "test": "mocha out/test/**/*.js"
   },
   "dependencies": {
-    "sherpa-onnx-node": "^1.10.30",
+    "extract-zip": "^2.0.1",
+    "sherpa-onnx-node": "1.10.30",
     "tar": "^6.2.0",
     "unbzip2-stream": "^1.4.3"
   },
   "devDependencies": {
-    "@types/node": "^16.18.119",
-    "@types/vscode": "^1.95.0",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vscode/test-electron": "^2.3.9",
-    "eslint": "^8.57.1",
-    "typescript": "^5.6.3"
+    "@types/mocha": "^10.0.9",
+    "@types/node": "^14.17.0",
+    "@types/sinon": "^10.0.20",
+    "@types/vscode": "^1.60.0",
+    "@vscode/test-electron": "^2.3.8",
+    "mocha": "^10.8.2",
+    "sinon": "^15.2.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.4.3"
   },
   "enabledApiProposals": [
     "speech"
@@ -98,6 +108,7 @@
   "files": [
     "out/**/*",
     "models/**/*",
-    "media/**/*"
+    "media/**/*",
+    "native/**/*"
   ]
 }
